--- a/html/first.html
+++ b/html/first.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,31 @@
     <meta name="description" content="A brief description of the page">
     <meta name="keywords" content="HTML, meta tags, example">
     <title>Hello world</title>
-    <link rel="shortcut icon" href="https://i.pinimg.com/originals/37/9d/66/379d66c4c318eac167756920cec5119e.gif" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.pinimg.com/originals/37/9d/66/379d66c4c318eac167756920cec5119e.gif"
+        type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/brands.min.css"
+        integrity="sha512-WxpJXPm/Is1a/dzEdhdaoajpgizHQimaLGL/QqUIAjIihlQqlPQb1V9vkGs9+VzXD7rgI6O+UsSKl4u5K36Ydw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <h1 style="color: aqua;">hello world</h1>
+
+    <!-- <h1 style="color: aqua;">hello world</h1>
     <img src="https://i.pinimg.com/originals/37/36/12/373612468cbaf228eaced7d7a6013668.gif" alt="">
-    <img src="https://i.pinimg.com/originals/5d/6a/06/5d6a061d1a3d6488c15cb1b552891059.gif" style="margin-bottom: 99px;"  width="498px" alt="">
-    <img src="https://i.pinimg.com/originals/37/9d/66/379d66c4c318eac167756920cec5119e.gif" width="378px" style="margin-bottom: 99px; margin-left: 99px;" alt="">
+    <img src="https://i.pinimg.com/originals/5d/6a/06/5d6a061d1a3d6488c15cb1b552891059.gif" style="margin-bottom: 99px;"
+        width="498px" alt="">
+    <img src="https://i.pinimg.com/originals/37/9d/66/379d66c4c318eac167756920cec5119e.gif" width="378px"
+        style="margin-bottom: 99px; margin-left: 99px;" alt=""> -->
+
+    <!-- <i class="fa-brands fa-facebook">Facebook</i> -->
+    <i class="fa-brands fa-instagram">Instagram</i><br>
+    <i class="fa-brands fa-twitter">Twitter</i> <br>
+    <i class="fa-brands fa-facebook">Facebook</i><br>
+    <i class="fa-brands fa-github">GitHub</i>
+
 </body>
+
 </html>
