--- a/html/first.html
+++ b/html/first.html
@@ -19,20 +19,18 @@
 </head>
 
 <body>
-
-    <!-- <h1 style="color: aqua;">hello world</h1>
+   <div class="imgs">
+    <h1 style="color: aqua;">hello world</h1>
     <img src="https://i.pinimg.com/originals/37/36/12/373612468cbaf228eaced7d7a6013668.gif" alt="">
     <img src="https://i.pinimg.com/originals/5d/6a/06/5d6a061d1a3d6488c15cb1b552891059.gif" style="margin-bottom: 99px;"
         width="498px" alt="">
     <img src="https://i.pinimg.com/originals/37/9d/66/379d66c4c318eac167756920cec5119e.gif" width="378px"
-        style="margin-bottom: 99px; margin-left: 99px;" alt=""> -->
-
-    <!-- <i class="fa-brands fa-facebook">Facebook</i> -->
+        style="margin-bottom: 99px; margin-right: 99px;" alt=""><br>
+</div>
     <i class="fa-brands fa-instagram">Instagram</i><br>
     <i class="fa-brands fa-twitter">Twitter</i> <br>
     <i class="fa-brands fa-facebook">Facebook</i><br>
     <i class="fa-brands fa-github">GitHub</i>
-
 </body>
 
 </html>
